objects/AcctSeed__Payment_Processor_Customer__c/AcctSeed__Payment_Processor_Customer__c.object-meta.xml
<CustomObject>
    <label>Payment Processor Customer</label>
    <nameField>
        <displayFormat>PPC-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Processor Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>