objects/AcctSeed__Payment_Processor_Customer__c/fields/AcctSeed__Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Processor Customers</relationshipLabel>
    <relationshipName>Payment_Processor_Customers1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>