objects/AcctSeed__Payment_Processor_Customer__c/fields/AcctSeed__External_Id__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>