objects/AcctSeed__Payment_Processor_Customer__c/fields/AcctSeed__Processor__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Processor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payment Processor</label>
    <referenceTo>AcctSeed__Payment_Processor__c</referenceTo>
    <relationshipLabel>Payment Processor Customers</relationshipLabel>
    <relationshipName>Payment_Processor_Customers2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>